fix: spacing

--- a/src/assets/styles/components/addon-links.css
+++ b/src/assets/styles/components/addon-links.css
@@ -12,8 +12,16 @@
   margin-top: 0;
 }
 
+.addon-links__wrapper h2:last-of-type {
+  margin-top: var(--sizing-base);
+}
+
 @media screen and (min-width: 768px) {
   :root {
     --grid: repeat(2,minmax(0,1fr));
+  }
+
+  .addon-links__wrapper h2 {
+    margin-top: 0;
   }
 }
